[package]
name = "ejlv_cli"
version = "0.2.0"
edition = "2024"

[dependencies]
ej-dispatcher-sdk = "0.3.3"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.12"
serde_json = "1.0"
octocrab = "0.44.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
ej-config = "0.3.0"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
