[package]
name = "ejlv"
version = "0.3.2"
edition = "2024"
license-file = "LICENSE"
description = "A command-line interface tool for dispatching jobs to [EJD](https://github.com/embj-org/ej) (EJ Dispatcher) in the [LVGL](https://github.com/lvgl/lvgl.git) testing workspace."

[dependencies]
ej-dispatcher-sdk = "0.3.3"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "fs"] }
thiserror = "2.0.12"
serde_json = "1.0"
octocrab = "0.44.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
ej-config = "0.3.0"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
